Solving a function to clone a object

--- a/html/login-form.html
+++ b/html/login-form.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
@@ -33,17 +33,17 @@
                 <div class="form-input">
                     <label for="name">Name</label>
                     <input id="name" type="text" placeholder="Enter your name...">
-                    <p id="error" class="invalid">Invalid input...</p>
+                    <p id="error1" class="invalid">Invalid input...</p>
                 </div>
                 <div class="form-input">
                     <label for="email">Email</label>
                     <input id="email" type="text" placeholder="Enter your email...">
-                    <p id="error" class="invalid">Invalid input...</p>
+                    <p id="error2" class="invalid">Invalid input...</p>
                 </div>
                 <div class="form-input">
                     <label for="password">Password</label>
                     <input id="password" type="password" placeholder="Enter your password...">
-                    <p id="errore" class="invalid">Invalid input...</p>
+                    <p id="error3" class="invalid">Invalid input...</p>
                 </div>
                 <button>Submit</button>
             </form>
@@ -55,6 +55,6 @@
         </div>
     </div>
 
-    <script src="tamrinExtra.js"></script>
+    <script src="../js/tamrinExtra.js"></script>
 </body>
 </html>
